--- a/home.html
+++ b/home.html
@@ -8,8 +8,10 @@
             margin: 0;
             padding: 0;
             color: #250b3e;
+            background: #F8F8FF;
         }
-        
+
+           
         header {
             background-color: #261d83;
             color: #f1eaea;
@@ -130,7 +132,7 @@
     </br>
     <br>
 </br>
-        <a href="index.php">
+        <a href="attendance.php">
         <button class="my-button">ATTENDANCE PAGE</button>
         </a>
 
